
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ LPACCEL ;
typedef int INT ;
typedef int HBITMAP ;
typedef int HACCEL ;
typedef int ACCEL ;


 int AllocateClipBoard2 (int) ;
 int CreateAcceleratorTableA (scalar_t__,int) ;
 int CreateAcceleratorTableW (scalar_t__,int) ;
 int CreateBitmap (int,int,int,int,int *) ;
 int CreateEllipticRgn (int,int,int,int) ;
 int DeleteObject (int ) ;
 int DestroyAcceleratorTable (int ) ;
 int SecureZeroMemory (scalar_t__,int) ;
 int * bitmaps ;
 scalar_t__ malloc (int) ;

void fungshuei() {
 HBITMAP bmp;

 for (int k = 0; k < 5000; k++) {

  bmp = CreateBitmap(1670, 2, 1, 8, ((void*)0));
  bitmaps[k] = bmp;
 }

 HACCEL hAccel, hAccel2;
 LPACCEL lpAccel;

 lpAccel = (LPACCEL)malloc(sizeof(ACCEL));
 SecureZeroMemory(lpAccel, sizeof(ACCEL));

 HACCEL *pAccels = (HACCEL *)malloc(sizeof(HACCEL) * 7000);
 HACCEL *pAccels2 = (HACCEL *)malloc(sizeof(HACCEL) * 7000);
 for (INT i = 0; i < 7000; i++) {
  hAccel = CreateAcceleratorTableA(lpAccel, 1);
  hAccel2 = CreateAcceleratorTableW(lpAccel, 1);
  pAccels[i] = hAccel;
  pAccels2[i] = hAccel2;
 }

 for (int k = 0; k < 5000; k++) {
  DeleteObject(bitmaps[k]);
 }

 for (int k = 0; k < 5000; k++) {
  CreateEllipticRgn(0x79, 0x79, 1, 1);
 }

 for (int k = 0; k < 5000; k++) {
  bmp = CreateBitmap(0x52, 1, 1, 32, ((void*)0));
  bitmaps[k] = bmp;
 }

 for (int k = 0; k < 1700; k++) {
  AllocateClipBoard2(0x30);
 }

 for (int k = 2000; k < 4000; k++) {
  DestroyAcceleratorTable(pAccels[k]);
  DestroyAcceleratorTable(pAccels2[k]);
 }

}
